# spine-directory-service-api

./: .gitignore  .tool-versions  CHANGELOG.md  Makefile  README.md  azure-pipelines.yml  ecs-proxies-containers.yml  ecs-proxies-deploy-dep.yml  ecs-proxies-deploy-int.yml  ecs-proxies-deploy-internal-dev-sandbox.yml  ecs-proxies-deploy-internal-dev.yml  ecs-proxies-deploy-internal-qa-sandbox.yml  ecs-proxies-deploy-internal-qa.yml  ecs-proxies-deploy-prod.yml  ecs-proxies-deploy-ref.yml  ecs-proxies-deploy-sandbox.yml  ecs-proxies-deploy.yml  manifest_template.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  smoketest-report.xml
.direnv/python-3.8.20/: pyvenv.cfg
.github/workflows/: continuous-integration.yml  pr-lint.yaml  unit-tests.yml
_tests/e2e/: sandbox.json  smoke.json
azure/: azure-build-pipeline.yml  azure-infrastructure-build.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project-vars.yml  project.yml
azure/common/: apigee-build.yml
azure/components/: get-access-token.yml  get-aws-secrets-and-ssm-params.yml  get-mfa-code.yml  notify-github-finished.yml  notify-github-pending.yml  run-e2e-tests.yml  run-prod-tests.yml  run-security-tests.yml  run-smoke-tests.yml  run-tests.yml  setup-terraform.yml  setup-utils.yml
azure/templates/: deploy-namespaced-service.yml  deploy-service.yml  deploy-specs.yml  identity-service-templating.yml  run-sandbox-tests.yml  run-tests.yml  setup-build-name.yml
docker/cache-service/: build.sh  docker-compose.yml
docker/sandbox/: .gitignore  Dockerfile  Pipfile  README.md  main.py
docker/sandbox/api/: openapi.yaml
docker/sds-api/: .gitignore  Dockerfile  README.md  build.sh  buildx.sh  docker-compose.yml
sandbox/: package.json
scripts/: build_proxy.sh  deploy_spec.sh  populate_ssm_parameters.sh
specification/: spine-directory-service.yaml  spine-directory.yaml
terraform/: main.tf
tests/: api_tests.py  conftest.py
tests/e2e/: e2e.json  sandbox.json  smoke.json
(+224 files in other folders)
