[project]
python = "^3.9"


[tool.poetry]
name = "spine-directory-service-api"
version = "0.0.1-alpha"
description = "TODO"

license = "MIT"

authors = [
    #TODO add authors
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/spine-directory-service-api"
homepage = "https://github.com/NHSDigital/spine-directory-service-api"

keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.1.32"
pytest-nhsd-apim = "^3.3.14"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^24.3"
pip-licenses = "^2.0.1"
jinja2 = "^3.1.3"
pytest = "^8.2.0"
coverage = "^5.5"
aiohttp = "^3.10.2"
pytest-asyncio = "^0.14.0"
pyyaml = "^6.0.1"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.1.32"


[tool.poetry.scripts]
